--- a/AliadoExpress/cadastromotorista.html
+++ b/AliadoExpress/cadastromotorista.html
@@ -3,7 +3,7 @@
 <head>
 <title>Cadastro de Motorista</title>
 <meta charset="utf-8" />
-<link rel="stylesheet" href="estiloformcadastros.css"/>
+<link rel="stylesheet" href="CSS/estiloformcadastros.css"/>
 <style>
     @import url('https://fonts.googleapis.com/css?family=Open+Sans');
     
