--- a/AliadoExpress/cadastroromaneio.html
+++ b/AliadoExpress/cadastroromaneio.html
@@ -3,7 +3,7 @@
 <head>
 <title>Cadastro Romaneio</title>
 <meta charset="utf-8" />
-<link rel="stylesheet" href="estiloformcadastros.css"/>
+<link rel="stylesheet" href="CSS/estiloformcadastros.css"/>
 <style>
     @import url('https://fonts.googleapis.com/css?family=Open+Sans');
     
@@ -35,7 +35,7 @@ body{
 <div class="area-formulario" id="area1" style="">
        <label class="topoform" for="dataemissao">Data de cadastro</label><br>
 <input type="date" class="texto" name="data" id="dataemissao" value="" readonly/>
-    <label for="nome">Código do Romaneio</label>
+    <label for="nome">Código</label>
     <input type="text" class="texto" name="codromaneio" id="nome"/>
     
     <label for="codfun">Motorista</label>
